@@ -1,3 +1,9 @@
+2006-10-27 Nikodemus Siivola <nikodemus@random-state.net>
+
+	* swank-sbcl (make-weak-key-hash-table): Restore support
+	for older SBCLs without weak hash-tables.
+	(make-weak-value-hash-table): Ditto.
+
 2006-10-26  Utz-Uwe Haus  <haus+slime@mail.math.uni-magdeburg.de>
 
 	* swank-allegro.lisp (sldb-break-at-start): Implement.
